# FmodProject

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/kimliu/fmodproject/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  com_kimliu_fmodproject_MainActivity.h  native-lib.cpp
app/src/main/java/com/kimliu/fmodproject/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/kimliu/fmodproject/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
